# hyman2026essential

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-CODE  LICENSE-CONTENT  README.md
python/: README.md  environment.yml  pyproject.toml  requirements.txt
python/figures/: README.md  _utils.py  regenerate_all.py
python/figures/ch01_intro/: fig_01_two_viewpoints.py
python/figures/ch03_force/: fig_03_exp_vs_linear_beta.py
python/figures/ch04_foi_from_data/: fig_04_poisson_thinning.py
python/figures/ch05_derivation/: fig_05_sir_block.py
python/figures/ch06_analysis/: fig_06_bifurcation.py  fig_06_invasion_burden.py  fig_06_phase_portrait.py
python/figures/ch07_simulations/: fig_07_Re_over_time.py  fig_07_S_uncertainty.py  fig_07_equivalence.py  fig_07_scenario1_long.py  fig_07_scenario1_trajectory.py  fig_07_scenario2.py
python/figures/ch08_fitting/: fig_08_central_comparison.py  fig_08_influenza_fit.py
python/figures/ch09_practice/: fig_09_N_star_sensitivity.py  fig_09_ascertainment.py  fig_09_bootstrap_CI.py  fig_09_horsetail.py  fig_09_profile_likelihood.py  fig_09_residuals.py
python/figures/ch10_sensitivity/: fig_10_invasion_burden_schematic.py  fig_10_prcc.py  fig_10_sens_asymmetry.py  fig_10_tornado.py
python/figures/ch11_generalizations/: fig_11_mortality_block.py  fig_11_seiqr_block.py  fig_11_seir_block.py  fig_11_siar_block.py  fig_11_sirs_block.py
python/figures/ch12_two_group/: fig_12_mixing_heatmap.py  fig_12_two_group_schematic.py
python/figures/ch13_sexual/: fig_13_bipartite_heterosexual.py  fig_13_three_group_msm.py
python/figures/ch14_vector/: fig_14_biting_decomposition.py  fig_14_vector_host_cycle.py
python/figures/ch15_vertical/: fig_15_horiz_vert_interplay.py  fig_15_vertical_flow.py
python/figures/ch16_pde/: fig_16_age_characteristics.py  (+1 more)
python/notebooks/: README.md
python/shared/: __init__.py  data_loaders.py  parameters.py  plotting.py  seeds.py  solvers.py  verification.py
python/tests/: test_canonical_parameters.py  test_exercises.py  test_figures.py  test_learning_guides.py  test_seeds.py  test_solvers.py  test_verification.py
(+110 files in other folders)
