[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyman2026essential-companion"
version = "2.0.0"
description = "Companion repository code for *Essential Considerations for Modeling Epidemics* (Hyman, Qu, Xue, 2026)."
readme = "../README.md"
requires-python = ">=3.10"
license = { file = "../LICENSE-CODE" }
authors = [
    { name = "James M. Hyman", email = "mhyman@tulane.edu" },
    { name = "Zhuolin Qu" },
    { name = "Ling Xue" },
]
keywords = [
    "epidemic-modeling",
    "mathematical-epidemiology",
    "SIR",
    "reproductive-number",
    "parameter-estimation",
    "sensitivity-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "lmfit>=1.3",
    "SALib>=1.5",
    "pyDOE3>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]
dev = [
    "ruff>=0.7",
    "jupyter>=1.1",
    "notebook>=7.2",
    "ipywidgets>=8.1",
]

[project.urls]
Homepage = "https://github.com/machyman/hyman2026essential"
Repository = "https://github.com/machyman/hyman2026essential"
Issues = "https://github.com/machyman/hyman2026essential/issues"

[tool.setuptools]
packages = ["shared"]
package-dir = { "" = "." }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
